# challenge-cayena

./: README.md  pyproject.toml
model_deploy_sdk/: config.py  deploy.py  utils.py  validation.py
notebooks/base_model/: 1 _exploratory_data_analysis.ipynb  2_training_and_validate_model.ipynb  3_deploy.ipynb  config.py
notebooks/base_model/notebooks/: 1 _exploratory_data_analysis.ipynb  2_training_and_validate_model.ipynb  3_deploy.ipynb  config.py
