[tool.poetry]
name = "challenge-cayena-models"
version = "0.1.0"
description = ""
authors = ["Fylype Wase <fylypexp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
notebook = "7.2.0"
pandas = "2.2.2"
scikit-learn = "1.4.2"
matplotlib = "3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
